<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.centralbankmoneyratetest.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:gravity="center">

        <Button
            android:id="@+id/convert_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/button_convert" />

        <Button
            android:id="@+id/refresh_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:text="@string/button_refresh" />

    </LinearLayout>

    <Button
        android:id="@+id/download_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:background="#80DB9A"
        android:gravity="center"
        android:text="@string/button_download"
        android:textColorLink="#E6FFFFFF"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_weight="0.1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:text="@string/valute_code_main_tittle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="0.1"
                    android:gravity="center|start"
                    android:text="@string/valute_tittle_numcode" />

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="0.1"
                    android:gravity="center"
                    android:text="@string/valute_tittle_charcode" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/recycler_tittle_name" />

        <TextView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/recycler_tittle_value" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_list_valute"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>